starlark-rust/starlark_syntax/src/syntax/grammar_tests/error_bad_def.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib
# ```

Program:
def :
  pass

Error:
error: Parse error: unexpected symbol ':' here, expected one of "IDENTIFIER"
 --> error_bad_def:1:5
  |
1 | def :
  |     ^
  |


Program:
def foo(x y):
  pass

Error:
error: Parse error: unexpected identifier 'y' here, expected one of "(", ")", ",", ":" or "="
 --> error_bad_def:1:11
  |
1 | def foo(x y):
  |           ^
  |


Program:
def foo(**x, y):
  pass

Error:
error: Parameter after kwargs
 --> error_bad_def:1:14
  |
1 | def foo(**x, y):
  |              ^
  |
